--- a/frontend/components.json
+++ b/frontend/components.json
@@ -5,7 +5,7 @@
   "tailwind": {
     "config": "",
     "css": "src/assets/main.css",
-    "baseColor": "slate",
+    "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
   },
