--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,10 @@
     "tailwindcss": "^4.1.6",
     "tw-animate-css": "^1.2.9",
     "up-fetch": "^2.1.2",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
