--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.2",
     "@tailwindcss/vite": "^4.1.6",
+    "@tanstack/vue-query": "^5.76.0",
+    "@tanstack/vue-query-devtools": "^5.76.0",
+    "@vee-validate/zod": "^4.15.0",
+    "@vueuse/core": "^13.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.510.0",
@@ -28,6 +33,8 @@
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vue-sonner": "^1.3.2",
+    "vue3-spinners": "^1.3.1",
     "zod": "^3.24.4"
   },
   "devDependencies": {
