--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@tanstack/vue-query-devtools": "^5.76.0",
     "@vee-validate/zod": "^4.15.0",
     "@vueuse/core": "^13.2.0",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.510.0",
@@ -29,7 +30,7 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.6",
     "tw-animate-css": "^1.2.9",
-    "up-fetch": "^2.1.2",
+    "update": "^0.7.4",
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
@@ -38,6 +39,8 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.8.0",
+    "@testing-library/vue": "^8.1.0",
     "@tsconfig/node22": "^22.0.1",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.14.0",
@@ -52,13 +55,16 @@
     "eslint-plugin-vue": "~10.0.0",
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
+    "msw": "^2.8.2",
     "npm-run-all2": "^7.0.2",
     "oxlint": "^0.16.0",
     "prettier": "3.5.3",
     "typescript": "~5.8.0",
-    "vite": "^6.2.4",
+    "vite": "^6.3.5",
     "vite-plugin-vue-devtools": "^7.7.2",
-    "vitest": "^3.1.1",
-    "vue-tsc": "^2.2.8"
+    "vitest": "^3.1.3",
+    "vitest-localstorage-mock": "^0.1.2",
+    "vue-tsc": "^2.2.8",
+    "wait-for-expect": "^3.0.2"
   }
 }
