--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -11,5 +11,15 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
+  test_db: 
+    image: postgres:17.4-alpine
+    container_name: test_database
+    ports:
+      - "5433:5432"
+    environment:
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_DB: gonote_test
+
 volumes:
   pgdata:
